--- a/templates/_macro.html
+++ b/templates/_macro.html
@@ -1,13 +1,54 @@
-{% macro render_input(name,placeholder, type="text") %}
+{% macro render_input(name, placeholder, type="text", errors=None) %}
+    <div class="control-group {% if errors %}has-error{% endif %}">
+        <label for="{{ name }}" class="control-label">{{ placeholder }}</label>
+        <div class="controls">
+            <input type="{{ type }}" name="{{ name }}" placeholder="{{ placeholder }}" value="">
+            {% if errors %}
+                <ul class="errors">
+                    {% for error in errors %}
+                        <li style="color: red;">{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+    </div>
+{% endmacro %}
 
+
+{% macro render_radio(name,placeholder,value, type="radio",errors=None) %}
 <div class="control-group">
     <label for="{{name}}" class="control-label">{{placeholder}}</label>
     <div class="controls">
-        <input type="{{type}}" name="{{name}}" placeholder="{{placeholder}}" value="">
+        <input type="{{type}}" name="{{name}}" value="{{value}}" placeholder="{{placeholder}}" value="" required>
     </div>
+    {% if errors %}
+                <ul class="errors">
+                    {% for error in errors %}
+                        <li style="color: red;">{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
 </div>
 
 {%endmacro%}
+
+{% macro render_field(field) %}
+  <p>
+    {{ field.label }}
+    <br>
+    {{ field(**kwargs)|safe }}
+    {% if field.errors %}
+      <ul>
+        {%for error in field.errors%}
+            <li style="color: red;">
+                {{error}}
+            </li>
+            {%endfor%}
+      </ul>
+    {% endif %}
+  </p>
+{% endmacro %}
+
 
 {% macro render_field(field)%}
     <div class="control-group">
@@ -25,6 +66,4 @@
             {%endfor%}
         </ul>
         {%endif%}    
-{%endmacro%}
-
-
+{%endmacro%} 
