--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,11 +9,32 @@
     <title>Document</title>
 
     <style>
+
         body{
             padding-top: 60px;
         }
         .tr-head{background: red;}
+        .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        }
+        table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        }
 
+        td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+        }
+
+        tr:nth-child(even) {
+        background-color: #ffffff;
+}
     </style>
  <link rel="stylesheet" href="static\css\bootstrap-responsive.min.css">
 </head>
