Actividad calculadora resistencia

--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -3,7 +3,7 @@
 {% block content %}
   {% from "macros.html" import render_field,render_field1 %}
 
-      <title>Calculadora de Resistencias.</title>
+      <title>Calculadora de Resistencias</title>
       
       <style>
         .black {background-color: black; color: white;}
